# tide-GPR

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  build.yml
examples/: example_multiscale_crosscorr_wrong_wavelet.py  example_multiscale_filtered.py  example_multiscale_joint_eps_sigma.py  example_multiscale_random_sources.py  wavefield_animation.py
examples/data/: OverThrust.npy
src/tide/: __init__.py  backend_utils.py  common.py  maxwell.py  staggered.py  storage.py  utils.py  wavelets.py
src/tide/csrc/: CMakeLists.txt  common_cpu.h  common_gpu.h  maxwell.c  maxwell.cu  maxwell3d.c  staggered_grid.h  storage_utils.c  storage_utils.cu  storage_utils.h
tests/: test_api_wrappers.py  test_common.py  test_edge_cases.py  test_gradients.py  test_maxwell_analytic.py  test_maxwell_boundary.py  test_maxwell_jvp_cuda.py  test_maxwell_rwii.py  test_maxwell_storage.py  test_numerical_stability.py  test_staggered.py  test_utils.py
